changed directory and fixed route links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <a class="nav__list--active-btn" href="./index.html">Home</a>
         </li>
         <li>
-          <a href="./service.html">Service</a>
+          <a href="./pages/service.html">Service</a>
         </li>
         <li>
-          <a href="./contact.html">Contact</a>
+          <a href="./pages/contact.html">Contact</a>
         </li>
       </ol>
     </div>
@@ -254,7 +254,7 @@
       Visit our service page
     </h2>
 
-    <a href="./service.html">
+    <a href="./pages/service.html">
       <span class="blue__bg"></span>
       Service
     </a>
