--- a/pages/service.html
+++ b/pages/service.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./public/global.css">
-  <link rel="stylesheet" href="./assets/service-page/styles/service.css">
+  <link rel="stylesheet" href="../public/global.css">
+  <link rel="stylesheet" href="../assets/service-page/styles/service.css">
   <title>Service | Lahfen Autos</title>
 </head>
 
@@ -17,7 +17,7 @@
 
       <ol class="nav__list">
         <li>
-          <a href="./index.html">Home</a>
+          <a href="../index.html">Home</a>
         </li>
         <li>
           <a class="nav__list--active-btn" href="./service.html">Service</a>
@@ -74,7 +74,7 @@
       </ol>
 
       <div class="section__2">
-        <img src="./assets/service-page/images/service-jeep.png" alt="service jeep" />
+        <img src="../assets/service-page/images/service-jeep.png" alt="service jeep" />
       </div>
     </section>
   </div>
@@ -89,7 +89,7 @@
     <section class="benefit__list">
       <article>
         <header>
-          <img src="./assets/home-page/images/hero-img.png" alt="service icon" />
+          <img src="../assets/home-page/images/hero-img.png" alt="service icon" />
           <h3>
             Quality Choice
           </h3>
@@ -101,7 +101,7 @@
 
       <article>
         <header>
-          <img src="./assets/home-page/images/hero-img.png" alt="service icon" />
+          <img src="../assets/home-page/images/hero-img.png" alt="service icon" />
           <h3>
             Affordable Prices
           </h3>
@@ -114,7 +114,7 @@
 
       <article>
         <header>
-          <img src="./assets/home-page/images/hero-img.png" alt="service icon" />
+          <img src="../assets/home-page/images/hero-img.png" alt="service icon" />
           <h3>
             Convenient Online Booking
           </h3>
@@ -148,7 +148,7 @@
 
       <div class="footer__cta">
         <button class="footer__cta--btn">
-          <img src="./public/images/apple-logo.png" alt="apple logo"/>
+          <img src="../public/images/apple-logo.png" alt="apple logo"/>
           <div>
             <span>Download on the</span>
             <span>Apple Store</span>
@@ -156,7 +156,7 @@
         </button>
 
         <button class="footer__cta--btn">
-          <img src="./public/images/play-store.png" alt="google play logo" />
+          <img src="../public/images/play-store.png" alt="google play logo" />
           <div>
             <span>Get it on</span>
             <span>Google Play</span>
@@ -174,16 +174,16 @@
 
       <div class="socials">
         <a href="#">
-          <img src="./public/images/ig.png" alt="instagram" height="50" width="50" />
+          <img src="../public/images/ig.png" alt="instagram" height="50" width="50" />
         </a>
         <a href="#">
-          <img src="./public/images/dribble.png" alt="dribble" height="50" width="50" />
+          <img src="../public/images/dribble.png" alt="dribble" height="50" width="50" />
         </a>
         <a href="#">
-          <img src="./public/images/x.png" alt="x" height="50" width="50" />
+          <img src="../public/images/x.png" alt="x" height="50" width="50" />
         </a>
         <a href="#">
-          <img src="./public/images/you-tube.png" alt="youtube" height="50" width="50" />
+          <img src="../public/images/you-tube.png" alt="youtube" height="50" width="50" />
         </a>
       </div>
     </section>
