--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./public/global.css">
-  <link rel="stylesheet" href="./assets/contact-page/styles/contact.css">
+  <link rel="stylesheet" href="../public/global.css">
+  <link rel="stylesheet" href="../assets/contact-page/styles/contact.css">
   <title>Contact | Lahfen Auto</title>
 </head>
 
@@ -17,7 +17,7 @@
 
       <ol class="nav__list">
         <li>
-          <a href="./index.html">Home</a>
+          <a href="../index.html">Home</a>
         </li>
         <li>
           <a href="./service.html">Service</a>
@@ -66,7 +66,7 @@
       </form>
 
       <div class="image__container">
-        <img src="./assets/contact-page/images/contact-page-img.png" alt="contact form image" />
+        <img src="../assets/contact-page/images/contact-page-img.png" alt="contact form image" />
       </div>
     </section>
   </div>
@@ -76,7 +76,7 @@
       Go back to the home page
     </h2>
 
-    <a href="./index.html">
+    <a href="../index.html">
       <span class="blue__bg"></span>
       Back to Home
     </a>
@@ -92,7 +92,7 @@
 
       <div class="footer__cta">
         <button class="footer__cta--btn">
-          <img src="./public/images/apple-logo.png" alt="apple logo"/>
+          <img src="../public/images/apple-logo.png" alt="apple logo"/>
           <div>
             <span>Download on the</span>
             <span>Apple Store</span>
@@ -100,7 +100,7 @@
         </button>
 
         <button class="footer__cta--btn">
-          <img src="./public/images/play-store.png" alt="google play logo" />
+          <img src="../public/images/play-store.png" alt="google play logo" />
           <div>
             <span>Get it on</span>
             <span>Google Play</span>
@@ -118,16 +118,16 @@
 
       <div class="socials">
         <a href="#">
-          <img src="./public/images/ig.png" alt="instagram" height="50" width="50" />
+          <img src="../public/images/ig.png" alt="instagram" height="50" width="50" />
         </a>
         <a href="#">
-          <img src="./public/images/dribble.png" alt="dribble" height="50" width="50" />
+          <img src="../public/images/dribble.png" alt="dribble" height="50" width="50" />
         </a>
         <a href="#">
-          <img src="./public/images/x.png" alt="x" height="50" width="50" />
+          <img src="../public/images/x.png" alt="x" height="50" width="50" />
         </a>
         <a href="#">
-          <img src="./public/images/you-tube.png" alt="youtube" height="50" width="50" />
+          <img src="../public/images/you-tube.png" alt="youtube" height="50" width="50" />
         </a>
       </div>
     </section>
