--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../public/global.css">
   <link rel="stylesheet" href="../assets/contact-page/styles/contact.css">
-  <title>Contact | Lahfen Auto</title>
+  <title>Contact | Lahfen Autos</title>
 </head>
 
 <body>
