--- a/pages/service.html
+++ b/pages/service.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../public/global.css">
   <link rel="stylesheet" href="../assets/service-page/styles/service.css">
+  <link rel="icon" href="../assets/LA.png">
   <title>Service | Lahfen Autos</title>
 </head>
 
