--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./public/global.css">
   <link rel="stylesheet" href="./assets/home-page/styles/home.css">
-
-
+  
+  <link rel="icon" href="../assets/LA.png">
   <title>Home Page</title>
 </head>
 
